--- a/CruzadaSite/Cruzada/templates/pedidos.html
+++ b/CruzadaSite/Cruzada/templates/pedidos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block pageLevelStyle   %}
-<link href="{{ STATIC_URL }}css/colors/color-red.css" rel="stylesheet">
+
 <link rel="stylesheet" href="{{ STATIC_URL }}plugins/datatables/dataTables.css">
 <link rel="stylesheet" href="{{ STATIC_URL }}plugins/datatables/dataTables.tableTools.css">
 {% endblock pageLevelStyle %}
@@ -24,8 +24,8 @@
                 <div class="col-md-12">
                     <div class="tabcordion">
                         <ul id="myTab" class="nav nav-tabs">
-                            <li class="active"><a href="#externos" data-toggle="tab">Entrantes</a></li>
-                            <li><a href="#propios" data-toggle="tab">Salientes</a></li>
+                            <li class="active"><a href="#externos" data-toggle="tab">Externos</a></li>
+                            <li><a href="#propios" data-toggle="tab">Propios</a></li>
 
                         </ul>
                         <div id="myTabContent" class="tab-content">
@@ -101,7 +101,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
